--- a/index.html
+++ b/index.html
@@ -44,20 +44,18 @@ table.mytable td {
 <th>Suunnistusjaos</th>
 <th></th>
 </tr>
+<tr></tr>
 <tr>
-<th>päivä</th>
+<th>vuosi</th>
+<th>kausi</th>
 <th>sarjat</th>
-<th>2023</th>
+<th></th>
 </tr>
 <tr>
+<td>2024</td>
+<td>päivä</td>
 <td><a href=results/2024/paiva/results_pitka.html>pitkä sarja</a}</td>
-<td></td>
-<td></td>
-</tr>
-<tr>
 <td><a href=results/2024/paiva/results_lyhyt.html>lyhyt sarja</a}</td>
-<td></td>
-<td></td>
 </tr>
 </table>
 <br />
