--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@ table.mytable td {
 <td>2024</td>
 <td><a href=2024/paiva/results/results_pitka.html>pitkä</a}</td>
 <td><a href=2024/paiva/results/results_lyhyt.html>lyhyt</a}</td>
+<td><a href=2024/yo/results/results_pitka.html>pitkä</a}</td>
+<td><a href=2024/yo/results/results_lyhyt.html>lyhyt</a}</td>
 <td></td>
 <td></td>
 </tr>
