--- a/index.html
+++ b/index.html
@@ -68,13 +68,18 @@ table.mytable td {
 <th></th>
 </tr>
 <tr>
+<td>2025</td>
+<td><a href=2025/paiva/results/results_pitka.html>pitkä</a}</td>
+<td><a href=2025/paiva/results/results_lyhyt.html>lyhyt</a}</td>
+<td></td>
+<td></td>
+</tr>
+<tr>
 <td>2024</td>
 <td><a href=2024/paiva/results/results_pitka.html>pitkä</a}</td>
 <td><a href=2024/paiva/results/results_lyhyt.html>lyhyt</a}</td>
 <td><a href=2024/yo/results/results_pitka.html>pitkä</a}</td>
 <td><a href=2024/yo/results/results_lyhyt.html>lyhyt</a}</td>
-<td></td>
-<td></td>
 </tr>
 <tr>
 <td>2023</td>
