--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ table.mytable td {
 <td>2025</td>
 <td><a href=2025/paiva/results/results_pitka.html>pitkä</a}</td>
 <td><a href=2025/paiva/results/results_lyhyt.html>lyhyt</a}</td>
-<td></td>
-<td></td>
+<td><a href=2025/yo/results/results_pitka.html>pitkä</a}</td>
+<td><a href=2025/yo/results/results_lyhyt.html>lyhyt</a}</td>
 </tr>
 <tr>
 <td>2024</td>
